# vertexcover_project

./: .gitignore  CMakeLists.txt  README.md  main.cpp  prjece650.cpp  result.csv  result2.txt  test.txt  user.yml
